Internal: Ignore "unused" translations from ckeditor5-core when checking translations.
The `ckeditor5-core` package offers translations used by some Commercial
features only. However, these terms are universal so we keep them in the
OSS repo.

--- a/package.json
+++ b/package.json
@@ -196,8 +196,8 @@
     "docs:verify": "node ./scripts/web-crawler/index.mjs --docs",
     "docs:lint": "node scripts/vale/vale.mjs",
     "docs:vale": "vale",
-    "translations:synchronize": "node ./scripts/translations/synchronize.mjs",
-    "translations:validate": "node ./scripts/translations/synchronize.mjs --validate-only",
+    "translations:synchronize": "node ./scripts/translations/synchronize.mjs --ignore-unused-core-package-contexts",
+    "translations:validate": "node ./scripts/translations/synchronize.mjs --ignore-unused-core-package-contexts --validate-only",
     "translations:move": "node ./scripts/translations/move.mjs",
     "build": "tsc --build --force ./tsconfig.release-ckeditor5.json",
     "build:dist": "node scripts/nim/build-ckeditor5.mjs",
