Update package.json to use `nightly` for `@ckeditor/ckeditor5-*` from the `ckeditor5-premium-features` package.

--- a/package.json
+++ b/package.json
@@ -85,9 +85,9 @@
   },
   "devDependencies": {
     "@babel/parser": "^7.23.3",
-    "@ckeditor/ckeditor5-ai": "44.3.0",
-    "@ckeditor/ckeditor5-case-change": "44.3.0",
-    "@ckeditor/ckeditor5-comments": "44.3.0",
+    "@ckeditor/ckeditor5-ai": "nightly",
+    "@ckeditor/ckeditor5-case-change": "nightly",
+    "@ckeditor/ckeditor5-comments": "nightly",
     "@ckeditor/ckeditor5-dev-build-tools": "^47.0.0",
     "@ckeditor/ckeditor5-dev-bump-year": "^47.0.0",
     "@ckeditor/ckeditor5-dev-ci": "^47.0.0",
@@ -99,27 +99,27 @@
     "@ckeditor/ckeditor5-dev-translations": "^47.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^47.0.0",
     "@ckeditor/ckeditor5-dev-web-crawler": "^47.0.0",
-    "@ckeditor/ckeditor5-document-outline": "44.3.0",
-    "@ckeditor/ckeditor5-email": "0.0.1",
-    "@ckeditor/ckeditor5-export-pdf": "44.3.0",
-    "@ckeditor/ckeditor5-export-word": "44.3.0",
-    "@ckeditor/ckeditor5-export-inline-styles": "0.0.1",
-    "@ckeditor/ckeditor5-format-painter": "44.3.0",
-    "@ckeditor/ckeditor5-import-word": "44.3.0",
+    "@ckeditor/ckeditor5-document-outline": "nightly",
+    "@ckeditor/ckeditor5-email": "nightly",
+    "@ckeditor/ckeditor5-export-pdf": "nightly",
+    "@ckeditor/ckeditor5-export-word": "nightly",
+    "@ckeditor/ckeditor5-export-inline-styles": "nightly",
+    "@ckeditor/ckeditor5-format-painter": "nightly",
+    "@ckeditor/ckeditor5-import-word": "nightly",
     "@ckeditor/ckeditor5-inspector": "^4.0.0",
-    "@ckeditor/ckeditor5-list-multi-level": "44.3.0",
-    "@ckeditor/ckeditor5-merge-fields": "44.3.0",
+    "@ckeditor/ckeditor5-list-multi-level": "nightly",
+    "@ckeditor/ckeditor5-merge-fields": "nightly",
     "@ckeditor/ckeditor5-mermaid": "ckeditor/ckeditor5-mermaid#v0.0.3",
-    "@ckeditor/ckeditor5-pagination": "44.3.0",
-    "@ckeditor/ckeditor5-paste-from-office-enhanced": "44.3.0",
+    "@ckeditor/ckeditor5-pagination": "nightly",
+    "@ckeditor/ckeditor5-paste-from-office-enhanced": "nightly",
     "@ckeditor/ckeditor5-react": "^9.5.0",
-    "@ckeditor/ckeditor5-real-time-collaboration": "44.3.0",
-    "@ckeditor/ckeditor5-revision-history": "44.3.0",
-    "@ckeditor/ckeditor5-slash-command": "44.3.0",
-    "@ckeditor/ckeditor5-source-editing-enhanced": "44.3.0",
-    "@ckeditor/ckeditor5-template": "44.3.0",
-    "@ckeditor/ckeditor5-track-changes": "44.3.0",
-    "@ckeditor/ckeditor5-uploadcare": "44.3.0",
+    "@ckeditor/ckeditor5-real-time-collaboration": "nightly",
+    "@ckeditor/ckeditor5-revision-history": "nightly",
+    "@ckeditor/ckeditor5-slash-command": "nightly",
+    "@ckeditor/ckeditor5-source-editing-enhanced": "nightly",
+    "@ckeditor/ckeditor5-template": "nightly",
+    "@ckeditor/ckeditor5-track-changes": "nightly",
+    "@ckeditor/ckeditor5-uploadcare": "nightly",
     "@inquirer/prompts": "^6.0.0",
     "@listr2/prompt-adapter-inquirer": "^2.0.16",
     "@ocular-d/vale-bin": "^2.29.1",
@@ -128,7 +128,7 @@
     "acorn": "^8.11.3",
     "assert": "^2.0.0",
     "chalk": "^5.0.0",
-    "ckeditor5-premium-features": "44.3.0",
+    "ckeditor5-premium-features": "nightly",
     "coveralls": "^3.1.0",
     "date-fns": "2.30.0",
     "esbuild": "^0.25.0",
