--- a/packages/ckeditor5-html-support/package.json
+++ b/packages/ckeditor5-html-support/package.json
@@ -41,6 +41,7 @@
     "@ckeditor/ckeditor5-editor-classic": "45.0.0",
     "@ckeditor/ckeditor5-editor-multi-root": "45.0.0",
     "@ckeditor/ckeditor5-essentials": "45.0.0",
+    "@ckeditor/ckeditor5-bold": "45.0.0",
     "@ckeditor/ckeditor5-font": "45.0.0",
     "@ckeditor/ckeditor5-highlight": "45.0.0",
     "@ckeditor/ckeditor5-horizontal-line": "45.0.0",
