--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -102,7 +102,7 @@ commands:
 jobs:
   cke5_validators:
     machine: true
-    resource_class: large
+    resource_class: medium
     steps:
       - checkout_command
       - bootstrap_repository_command
@@ -224,7 +224,7 @@ jobs:
 
   stale_bot:
     machine: true
-    resource_class: large
+    resource_class: medium
     steps:
       - checkout_command
       - bootstrap_repository_command
