Internal: Check if dumping dependencies don't break CI.

--- a/package.json
+++ b/package.json
@@ -88,17 +88,17 @@
     "@ckeditor/ckeditor5-ai": "45.0.0",
     "@ckeditor/ckeditor5-case-change": "45.0.0",
     "@ckeditor/ckeditor5-comments": "45.0.0",
-    "@ckeditor/ckeditor5-dev-build-tools": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-bump-year": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-ci": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-dependency-checker": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-docs": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-release-tools": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-stale-bot": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-tests": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-translations": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-utils": "^47.0.0",
-    "@ckeditor/ckeditor5-dev-web-crawler": "^47.0.0",
+    "@ckeditor/ckeditor5-dev-build-tools": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-build-tools?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-bump-year": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-bump-year?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-ci": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-ci?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-dependency-checker": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-dependency-checker?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-docs": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-docs?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-release-tools": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-release-tools?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-stale-bot": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-stale-bot?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-tests": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-tests?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-translations": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-translations?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-utils": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-utils?ck/18364-update-dependencies",
+    "@ckeditor/ckeditor5-dev-web-crawler": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-web-crawler?ck/18364-update-dependencies",
     "@ckeditor/ckeditor5-document-outline": "45.0.0",
     "@ckeditor/ckeditor5-email": "45.0.0",
     "@ckeditor/ckeditor5-export-pdf": "45.0.0",
