--- a/packages/ckeditor5-essentials/package.json
+++ b/packages/ckeditor5-essentials/package.json
@@ -23,7 +23,7 @@
     "ckeditor5": "45.0.0"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-dev-utils": "^47.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "https://gitpkg.vercel.app/ckeditor/ckeditor5-dev/packages/ckeditor5-dev-utils?ck/18364-update-dependencies",
     "@ckeditor/ckeditor5-editor-classic": "45.0.0",
     "@ckeditor/ckeditor5-paragraph": "45.0.0",
     "@ckeditor/ckeditor5-theme-lark": "45.0.0",
