--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -100,6 +100,22 @@ commands:
             echo export CKE5_COMMIT_SHA1=$CIRCLE_SHA1 >> $BASH_ENV
 
 jobs:
+  cke5_manual:
+    machine: true
+    resource_class: large
+    steps:
+      - checkout_command
+      - halt_if_short_flow
+      - bootstrap_repository_command
+      - prepare_environment_command
+      - install_newest_emoji
+      - run:
+          name: Prepare DLL builds in CKEditor 5
+          command: yarn run dll:build
+      - run:
+          name: Verify CKEditor 5 manual tests
+          command: bash scripts/check-manual-tests.sh -r ckeditor5 -f ckeditor5
+
   cke5_validators:
     machine: true
     resource_class: medium
@@ -203,6 +219,24 @@ jobs:
           name: Trigger the Uber CI
           command: yarn ckeditor5-dev-ci-trigger-circle-build
 
+  release_prepare:
+    machine: true
+    resource_class: large
+    steps:
+      - checkout_command
+      - halt_if_short_flow
+      - bootstrap_repository_command
+      - prepare_environment_command
+      - run:
+          name: Check if packages are ready to be released
+          command: npm run release:prepare-packages -- --compile-only --verbose
+      - run:
+          name: Lint generated packages
+          command: yarn run release:lint-packages
+      - run:
+          name: Check dependencies
+          command: yarn run check-dependencies
+
   notify_ci_failure:
     machine: true
     resource_class: medium
@@ -262,12 +296,24 @@ workflows:
               ignore:
                 - stable
       - cke5_validators
+      - cke5_manual:
+          filters:
+            branches:
+              ignore:
+                - stable
+      - release_prepare:
+          filters:
+            branches:
+              ignore:
+                - stable
       - cke5_trigger_uber_ci:
           requires:
             - cke5_tests_framework
             - cke5_tests_features_batch_n
             - cke5_coverage
             - cke5_validators
+            - cke5_manual
+            - release_prepare
           filters:
             branches:
               only:
@@ -277,6 +323,8 @@ workflows:
             - cke5_tests_framework
             - cke5_tests_features_batch_n
             - cke5_validators
+            - cke5_manual
+            - release_prepare
           filters:
             branches:
               only:
@@ -295,6 +343,8 @@ workflows:
       - cke5_tests_framework
       - cke5_tests_features_batch_n
       - cke5_validators
+      - cke5_manual
+      - release_prepare
       - notify_ci_failure:
           hideAuthor: "true"
           filters:
