--- a/packages/ckeditor5-minimap/package.json
+++ b/packages/ckeditor5-minimap/package.json
@@ -28,6 +28,7 @@
     "@ckeditor/ckeditor5-easy-image": "45.0.0",
     "@ckeditor/ckeditor5-editor-decoupled": "45.0.0",
     "@ckeditor/ckeditor5-font": "45.0.0",
+    "@ckeditor/ckeditor5-fullscreen": "45.0.0",
     "@ckeditor/ckeditor5-image": "45.0.0",
     "@ckeditor/ckeditor5-indent": "45.0.0",
     "@ckeditor/ckeditor5-page-break": "45.0.0",
