--- a/packages/ckeditor5-source-editing/package.json
+++ b/packages/ckeditor5-source-editing/package.json
@@ -21,6 +21,7 @@
     "ckeditor5": "45.0.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-code-block": "45.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^49.0.0",
     "@ckeditor/ckeditor5-editor-classic": "45.0.0",
     "@ckeditor/ckeditor5-engine": "45.0.0",
