--- a/package.json
+++ b/package.json
@@ -133,9 +133,9 @@
     "date-fns": "2.30.0",
     "esbuild": "^0.25.0",
     "eslint": "^9.26.0",
-    "eslint-config-ckeditor5": "^10.0.0-alpha.3",
+    "eslint-config-ckeditor5": "^10.0.0",
     "eslint-formatter-stylish": "^8.40.0",
-    "eslint-plugin-ckeditor5-rules": "^10.0.0-alpha.3",
+    "eslint-plugin-ckeditor5-rules": "^10.0.0",
     "estree-walker": "^3.0.3",
     "fs-extra": "^11.0.0",
     "glob": "^10.0.0",
@@ -181,7 +181,7 @@
   },
   "scripts": {
     "postinstall": "node ./scripts/postinstall.mjs",
-    "lint": "eslint --quiet \"**/*.{js,ts,mjs,cjs}\" --format ./scripts/eslint-formatter.cjs",
+    "lint": "eslint --format ./scripts/eslint-formatter.cjs",
     "stylelint": "stylelint --quiet --allow-empty-input \"packages/**/*.css\" \"docs/**/*.css\"",
     "test": "node --max_old_space_size=4096 node_modules/@ckeditor/ckeditor5-dev-tests/bin/testautomated.js",
     "manual": "node --max_old_space_size=8192 node_modules/@ckeditor/ckeditor5-dev-tests/bin/testmanual.js",
@@ -221,8 +221,8 @@
     "bump-year": "node ./scripts/bump-year.mjs"
   },
   "lint-staged": {
-    "**/*.{js,ts,mjs,cjs}": [
-      "eslint --quiet"
+    "**/*": [
+      "eslint"
     ],
     "**/*.css": [
       "stylelint --quiet --allow-empty-input"
