Restored the missing `--quiet` parameter for a pre-commit hook. [skip ci]

--- a/package.json
+++ b/package.json
@@ -222,7 +222,7 @@
   },
   "lint-staged": {
     "**/*": [
-      "eslint"
+      "eslint --quiet"
     ],
     "**/*.css": [
       "stylelint --quiet --allow-empty-input"
