--- a/package.json
+++ b/package.json
@@ -101,9 +101,9 @@
     "@ckeditor/ckeditor5-dev-web-crawler": "^49.0.0",
     "@ckeditor/ckeditor5-document-outline": "45.1.0",
     "@ckeditor/ckeditor5-email": "45.1.0",
+    "@ckeditor/ckeditor5-export-inline-styles": "45.1.0",
     "@ckeditor/ckeditor5-export-pdf": "45.1.0",
     "@ckeditor/ckeditor5-export-word": "45.1.0",
-    "@ckeditor/ckeditor5-export-inline-styles": "45.1.0",
     "@ckeditor/ckeditor5-format-painter": "45.1.0",
     "@ckeditor/ckeditor5-import-word": "45.1.0",
     "@ckeditor/ckeditor5-inspector": "^4.0.0",
@@ -163,6 +163,7 @@
     "table": "^6.8.1",
     "terser-webpack-plugin": "^5.0.0",
     "typescript": "5.0.4",
+    "typescript-eslint": "^8.33.0",
     "umberto": "^7.0.0",
     "upath": "^2.0.0",
     "wait-on": "^6.0.1",
