--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "@ckeditor/ckeditor5-template": "45.2.0",
     "@ckeditor/ckeditor5-track-changes": "45.2.0",
     "@ckeditor/ckeditor5-uploadcare": "45.2.0",
-    "@inquirer/prompts": "^6.0.0",
+    "@inquirer/prompts": "^7.5.0",
     "@listr2/prompt-adapter-inquirer": "^2.0.16",
     "@ocular-d/vale-bin": "^2.29.1",
     "@webspellchecker/wproofreader-ckeditor5": "^3.0.0",
@@ -130,7 +130,7 @@
     "chalk": "^5.0.0",
     "ckeditor5-premium-features": "45.2.0",
     "coveralls": "^3.1.0",
-    "date-fns": "2.30.0",
+    "date-fns": "^4.0.0",
     "esbuild": "^0.25.0",
     "eslint": "^9.26.0",
     "eslint-config-ckeditor5": "^10.0.0",
@@ -138,25 +138,24 @@
     "eslint-plugin-ckeditor5-rules": "^10.0.0",
     "estree-walker": "^3.0.3",
     "fs-extra": "^11.0.0",
-    "glob": "^10.0.0",
+    "glob": "^11.0.2",
     "globals": "^16.1.0",
     "http-server": "^14.1.1",
-    "husky": "^8.0.2",
-    "ini": "^4.1.1",
+    "husky": "^9.1.7",
+    "ini": "^5.0.0",
     "js-yaml": "^4.1.0",
-    "lint-staged": "^15.0.0",
+    "lint-staged": "^16.1.0",
     "listr2": "^8.0.0",
     "minimist": "^1.2.8",
-    "mkdirp": "^1.0.4",
-    "node-fetch": "^2.6.7",
-    "nyc": "^15.0.1",
-    "postcss-loader": "^4.3.0",
+    "mkdirp": "^3.0.0",
+    "nyc": "^17.1.0",
+    "postcss-loader": "^8.0.0",
     "publint": "^0.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^5.0.0",
+    "rimraf": "^6.0.1",
     "schema-utils": "^4.2.0",
-    "sharp": "^0.32.6",
+    "sharp": "^0.34.2",
     "stylelint": "^13.5.0",
     "stylelint-config-ckeditor5": "^4.0.0",
     "svgo": "^2.2.2",
@@ -166,7 +165,7 @@
     "typescript-eslint": "^8.33.0",
     "umberto": "^7.0.0",
     "upath": "^2.0.0",
-    "wait-on": "^6.0.1",
+    "wait-on": "^8.0.3",
     "webpack": "^5.94.0"
   },
   "engines": {
