--- a/packages/ckeditor5-html-support/package.json
+++ b/packages/ckeditor5-html-support/package.json
@@ -52,6 +52,7 @@
     "@ckeditor/ckeditor5-page-break": "45.2.0",
     "@ckeditor/ckeditor5-paragraph": "45.2.0",
     "@ckeditor/ckeditor5-paste-from-office": "45.2.0",
+    "@ckeditor/ckeditor5-select-all": "45.2.0",
     "@ckeditor/ckeditor5-source-editing": "45.2.0",
     "@ckeditor/ckeditor5-style": "45.2.0",
     "@ckeditor/ckeditor5-theme-lark": "45.2.0",
