Other (markdown-gfm): Migrate to remark / rehype packages.

--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -21,12 +21,16 @@
     "@ckeditor/ckeditor5-clipboard": "45.2.0",
     "@ckeditor/ckeditor5-core": "45.2.0",
     "@ckeditor/ckeditor5-engine": "45.2.0",
-    "@types/marked": "4.3.2",
-    "@types/turndown": "5.0.5",
     "ckeditor5": "45.2.0",
-    "marked": "4.0.12",
-    "turndown": "7.2.0",
-    "turndown-plugin-gfm": "1.0.2"
+    "rehype-dom-parse": "^5.0.2",
+    "rehype-dom-stringify": "^4.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-remark": "^10.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-autoformat": "45.2.0",
