Forbid `export default` in eslint configuration. (#18638)
Internal: Forbid export default in eslint configuration. Closes #18586

--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "eslint": "^9.26.0",
     "eslint-config-ckeditor5": "^11.0.0",
     "eslint-formatter-stylish": "^8.40.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-ckeditor5-rules": "^11.0.0",
     "estree-walker": "^3.0.3",
     "fs-extra": "^11.0.0",
