--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -27,8 +27,8 @@
     "rehype-dom-stringify": "4.0.2",
     "rehype-raw": "7.0.0",
     "rehype-remark": "10.0.1",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm-no-autolink": "2.1.5",
+    "remark-breaks": "4.0.0",
+    "remark-gfm": "4.0.1",
     "remark-parse": "11.0.0",
     "remark-rehype": "11.1.2",
     "remark-stringify": "11.0.0",
