--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -22,10 +22,10 @@
     "@ckeditor/ckeditor5-core": "45.2.0",
     "@ckeditor/ckeditor5-engine": "45.2.0",
     "ckeditor5": "45.2.0",
+    "hast-util-from-dom": "5.0.1",
     "hast-util-to-html": "9.0.5",
     "rehype-dom-parse": "5.0.2",
     "rehype-dom-stringify": "4.0.2",
-    "rehype-raw": "7.0.0",
     "rehype-remark": "10.0.1",
     "remark-breaks": "4.0.0",
     "remark-gfm": "4.0.1",
