Switch to the new changelog generator.

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@ckeditor/ckeditor5-comments": "45.2.0",
     "@ckeditor/ckeditor5-dev-build-tools": "^50.0.0",
     "@ckeditor/ckeditor5-dev-bump-year": "^50.0.0",
+    "@ckeditor/ckeditor5-dev-changelog": "^50.0.0",
     "@ckeditor/ckeditor5-dev-ci": "^50.0.0",
     "@ckeditor/ckeditor5-dev-dependency-checker": "^50.0.0",
     "@ckeditor/ckeditor5-dev-docs": "^50.0.0",
@@ -135,8 +136,8 @@
     "eslint": "^9.26.0",
     "eslint-config-ckeditor5": "^11.0.0",
     "eslint-formatter-stylish": "^8.40.0",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-ckeditor5-rules": "^11.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "estree-walker": "^3.0.3",
     "fs-extra": "^11.0.0",
     "glob": "^11.0.2",
@@ -181,6 +182,7 @@
     "url": "https://github.com/ckeditor/ckeditor5.git"
   },
   "scripts": {
+    "nice": "ckeditor5-dev-changelog-create-entry",
     "postinstall": "node ./scripts/postinstall.mjs",
     "lint": "eslint --format ./scripts/eslint-formatter.cjs",
     "stylelint": "stylelint --quiet --allow-empty-input \"packages/**/*.css\" \"docs/**/*.css\"",
@@ -206,7 +208,7 @@
     "build:dist": "node scripts/nim/build-ckeditor5.mjs",
     "predll:build": "npm run build",
     "dll:build": "node scripts/dll/build-dlls.mjs --base-dll-config ./scripts/dll/webpack.config.dll.mjs",
-    "changelog": "node ./scripts/release/changelog.mjs",
+    "release:prepare-changelog": "node ./scripts/release/preparechangelog.mjs",
     "release:prepare-packages": "node ./scripts/release/preparepackages.mjs",
     "release:publish-packages": "node ./scripts/release/publishpackages.mjs",
     "release:deploy-cdn": "node ./scripts/release/deploycdn.mjs",
