--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@wiris/mathtype-ckeditor5": "^8.13.1",
     "acorn": "^8.11.3",
     "assert": "^2.0.0",
+    "cli-table": "^0.3.11",
     "chalk": "^5.0.0",
     "ckeditor5-premium-features": "45.2.0",
     "coveralls": "^3.1.0",
