--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@ckeditor/ckeditor5-format-painter": "45.2.0",
     "@ckeditor/ckeditor5-import-word": "45.2.0",
     "@ckeditor/ckeditor5-inspector": "^4.0.0",
+    "@ckeditor/ckeditor5-line-height": "0.0.1",
     "@ckeditor/ckeditor5-list-multi-level": "45.2.0",
     "@ckeditor/ckeditor5-merge-fields": "45.2.0",
     "@ckeditor/ckeditor5-mermaid": "ckeditor/ckeditor5-mermaid#v0.0.4",
